<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Welcome!</string>
	<string name="app_name">TantCard</string>
	<string name="welcome_lack_of_mem">メモリ不足</string>
	<string name="welcome_create_dir_fail">新規フォルタは失敗しました。</string>
	<string name="menu_contact_op_title">TantCard連絡帳</string>
	<string name="menu_setting_list_title">設定</string>
	<string name="menu_contact_list">連絡先</string>
	<string name="menu_bookmark_list">ブックマーク</string>
	<string name="menu_call_list">発信履歴</string>
	<string name="menu_data_import">TantCardデータをインポートする</string>
	<string name="menu_data_export">Android連絡先にエクスポートする</string>
	<string name="menu_help">TantCard for Androidヘルプ</string>
	<string name="menu_about">このアプリについて</string>
	<string name="title_menu">TantCard for Android</string>
	<string name="title_bookmark"> ブックマーク</string>
	<string name="title_calllog">発信履歴</string>
	<string name="title_help">TantCard for Androidヘルプ</string>
	<string name="title_about">このアプリについて</string>
	<string name="title_import">TantCardデータインポート</string>
	<string name="btn_title_back">戻る</string>
	<string name="btn_title_menu">メニュー</string>
	<string name="btn_title_delete">削除</string>
	<string name="btn_title_del_calllog">削除</string>
	<string name="btn_title_edit_finish">編集終了</string>
	<string name="btn_title_finish">完了</string>
	<string name="btn_order_company">会社顺</string>
	<string name="btn_order_person">名前順</string>
	<string name="about_app_name">TantCard for Android</string>
	<string name="about_app_copyright">Copyright (C) Shimoda OA System Corporation.\nAll Rights Reserved.</string>
	<string name="about_btn_homepage">下田OAシステムのホームページ</string>
	<string name="version">Version</string>
	<string name="title_contact_list">連絡先</string>
	<string name="import_menu_title">インポートするデータを選択してください</string>
	<string name="import_menu_cancel">キャンセル</string>
	<string name="import_step2_menu_title">インポートするデータを選択してください</string>
	<string name="import_step2_menu_import_current">このレーコードのみ上書きする</string>
	<string name="import_step2_menu_ignore_current">このレーコードは更新しない</string>
	<string name="import_step2_menu_import_next">以降全ての重複レコードは上書きする</string>
	<string name="import_step2_menu_ignore_next">以降全ての重複レコードは更新しない</string>
	<string name="import_step2_menu_cancel">以降全てキャンセルする</string>
	<string name="import_btn_stop">キャンセル</string>
	<string name="tips_importing">データをインポートしています。</string>
	<string name="tips_import_finish">インポートが終了しました。</string>
	<string name="export_menu_title">メニュー</string>
	<string name="export_menu_select_all">全て選択する</string>
	<string name="export_menu_unselect_all">全て解除する</string>
	<string name="export_menu_export">エクスポート実行</string>
	<string name="export_menu_cancel">キャンセル</string>
	<string name="exporting_btn_stop">キャンセル</string>
	<string name="tips_exporting">データをエクスポートしています。</string>
	<string name="tips_export_finish">エクスポートが完了しました。</string>
	<string name="tips_need_to_select_export_contact">エクスポートするデータが選択されていません。</string>
	<string name="dlg_msg_export_finish">エクスポートが完了しました。</string>
	<string name="dlg_btn_confirm">確認</string>
	<string name="dlg_btn_cancel">キャンセル</string>
	<string name="tip">アラート</string>
	<string name="whether_to_exit">閉じてもよろしいですか？</string>
	<string name="exit">はい</string>
	<string name="tips_loading">Loading...</string>
	<string name="visit">ブラウザを開きます。よろしいですか？</string>
	<!-- 名片详情页-内容标题 -->
	<string name="detail_title_basic">基本情報</string>
	<string name="detail_title_contact1">連絡先1</string>
	<string name="detail_title_contact2">連絡先2</string>
	<string name="detail_title_contact3">連絡先3</string>
	<string name="detail_title_attachment">付属情報</string>
	<!-- 详情页菜单 -->
	<string name="detail_menu_item_bookmark_add">ブックマークに追加する</string>
	<string name="detail_menu_item_bookmark_del">ブックマークから削除する</string>
	<string name="detail_menu_item_company">検索</string>
	<string name="detail_menu_item_export">Android連絡先に追加する</string>
	<string name="detail_menu_item_edit">データを編集する</string>
	<string name="detail_menu_item_del">データを削除する</string>
	<string name="detail_menu_item_edit_save">データを更新する</string>
	<string name="detail_menu_item_edit_give_up">編集データを破棄する</string>
	<!-- 详情页操作提示-->
	<string name="detail_op_tips_bookmark_add_success">ブックマークに追加しました。</string>
	<string name="detail_op_tips_bookmark_add_fail">ブックマーク失敗しました。</string>
	<string name="detail_op_tips_bookmark_del_success">ブックマークから削除しました。</string>
	<string name="detail_op_tips_del_confirm">データを削除してよろしいですか？</string>
	<string name="detail_op_tips_export">アドレスを本体の連絡帳にコッピーします。よろしいですか？</string>
	<string name="detail_op_tips_export_exists">登録済みのアドレスがあります。上書きしてもよろしいですか？</string>
	<string name="detail_op_tips_export_success">アドレス帳に登録しました。</string>
	<string name="detail_op_tips_export_fail">アドレス帳に登録失敗しました。</string>
	<string name="detail_op_tips_website_empty">HPがありません。</string>
	<string name="detail_op_tips_website_fail">エラーが発生しました。</string>
	<string name="detail_op_tips_company_empty">会社情報がありません。</string>
	<string name="detail_op_tips_company_fail">エラーが発生しました。</string>
	<string name="detail_op_tips_tel_empty">電話番号がありません。</string>
	<string name="detail_op_tips_tel_fail">エラーが発生しました。</string>
	<string name="detail_op_tips_address_empty">アドレス情報がありません。</string>
	<string name="detail_op_tips_address_fail">エラーが発生しました。</string>
	<string name="detail_op_tips_skype_empty">Skype情報がありません。</string>
	<string name="detail_op_tips_skype_fail">エラーが発生しました。</string>
	<string name="detail_op_tips_email_empty">メール情報がありません。</string>
	<string name="detail_op_tips_email_fail">エラーが発生しました。</string>
	<string name="detail_op_tips_edit_confirm">横屏状态下无法修改联系人，请切换到竖屏</string>
	<!-- 详情页信息字段名字 -->
	<string name="detail_info_name">名前</string>
	<string name="detail_info_company">会社名</string>
	<string name="detail_info_affiliation">所属</string>
	<string name="detail_info_role">役割</string>
	<string name="detail_info_website">URL</string>
	<string name="detail_info_full_address">住所</string>
	<string name="detail_info_tel">TEL</string>
	<string name="detail_info_fax">FAX</string>
	<string name="detail_info_mobile">携帯</string>
	<string name="detail_info_email">メール</string>
	<string name="detail_info_skype">Skype</string>
	<string name="detail_info_classification1">大分類</string>
	<string name="detail_info_classification2">小分類</string>
	<string name="detail_info_meetingday">面会日</string>
	<string name="detail_info_registrationday">登録日</string>
	<string name="detail_info_note">メモ</string>
	<string name="detail_info_lastname">姓</string>
	<string name="detail_info_firstname">名</string>
	<string name="detail_info_lastname_kana">姓カナ</string>
	<string name="detail_info_firstname_kana">名カナ</string>
	<string name="detail_info_company_kana">会社名カナ</string>
	<string name="detail_info_zip">郵便番号</string>
	<string name="detail_info_state">都道府県</string>
	<string name="detail_info_city">市区町村</string>
	<string name="detail_info_address">番地</string>
	<!-- About page alert panel button -->
	<string name="about_yes">はい</string>
	<string name="about_no">いいえ</string>
	<!-- 日期选择控件按钮 -->
	<string name="date_picker_btn_cancel">キャンセル</string>
	<string name="date_picker_btn_confirm">確認</string>
	<!-- 常量字符串 -->
	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>
	<!--  Contact -->
	<string name="contact_group">TantCard</string>
</resources>
